[project]
name = "comfyui-ace-step-ksampler"
version = "2.0.0"
description = "Advanced KSampler nodes for ACE-Step audio generation with automatic quality detection and custom JKASS sampler"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ACE-Step KSampler Contributors"}
]
keywords = ["comfyui", "ace-step", "audio-generation", "stable-audio", "sampler", "quality-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "librosa>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/comfyui-ace-step-ksampler"
Documentation = "https://github.com/yourusername/comfyui-ace-step-ksampler/blob/main/README.md"
Repository = "https://github.com/yourusername/comfyui-ace-step-ksampler"
Issues = "https://github.com/yourusername/comfyui-ace-step-ksampler/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ace_step_ksampler", "ace_step_ksampler.py"]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
